# are-you-a-cat-mlops-pipeline

./: .dockerignore  .dvcignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  models.dvc  pyproject.toml  requirements-docker.txt  requirements-local.txt  requirements.txt
.dvc/: config
data/: processed.dvc
data/raw/: cats_vs_dogs.dvc
docs/: DVC_SETUP.md  GPU_MEMORY_MANAGEMENT.md  MEMORY_OPTIMIZATION.md  MODEL_CAPABILITIES.md  TEST_REPORT.md
notebooks/: colab_data_preprocessing.ipynb  colab_data_preprocessing_memory_efficient.ipynb  colab_model_training.ipynb  data_loading_and_preprocessing_test.ipynb  real_time_cat_dog_classifier.ipynb
scripts/: dvc_helper.sh  dvc_pull_smart.sh  dvc_push_all.sh  setup_b2_dvc.py  sync_dvc_remotes.sh
src/: data_loader.py  model_train.py  preprocess.py
tests/: test_data_pipeline.py  test_model_with_real_data.py  test_pipeline.py
