[project]
name = "are-you-a-cat-mlops-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.1.0",
    "mlflow>=3.5.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pip>=25.2",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "tensorflow[and-cuda]>=2.20.0",
    "tensorflow-datasets>=4.9.9",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "jupyter>=1.1.1",
    "ipykernel>=7.0.1",
    "dvc[s3]>=3.63.0",
]
