[project]
name = "are-you-a-cat-mlops-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.1.0",
    "boto3>=1.40.55",
    "dvc>=3.63.0",
    "dvc-http>=2.32.0",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "mlflow>=3.5.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pip>=25.2",
    "s3fs>=0.4.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
    "tensorflow-datasets>=4.9.9",
    "tensorflow[and-cuda]>=2.20.0",
]
